--- a/src/app/pages/refresher/refresher.page.html
+++ b/src/app/pages/refresher/refresher.page.html
@@ -4,7 +4,7 @@
       <ion-back-button></ion-back-button>
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>List</ion-title>
+    <ion-title>Refresher</ion-title>
   </ion-toolbar>
 </ion-header>
 
